# CQ4DS-babyagi-refactoring-exercise

./: .gitignore  INSTRUCTIONS.md  README.md  create_branch.sh  create_instructions.sh  pyproject.toml
Step00/: _README00.md  babyagi.py
Step01/: README00.md  babyagi.py
Step02/: README01.md  _README01.md  _README02.md  babyagi.py
Step03/: _README02.md  _README03.md  babyagi.py
Step04/: _README04.md  babyagi.py
Step05/: _README05.md  babyagi.py
Step06/: _README05.md  babyagi.py
Step07/: _README06.md  babyagi.py
Step08/: _README07.md  babyagi.py
Step09/: _README08.md  babyagi.py
Step10/: _README09.md  babyagi.py
Step11/: _README10.md  babyagi.py
Step6/: babyagi.py
